<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey" >

    <Button
        android:id="@+id/shop_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:background="@android:color/transparent"
        android:text="@string/back_button"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/shop_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/shop_title"
        android:textSize="36sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/shop_product_remove_ads_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/shop_title"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:background="@drawable/rounded_rectangle_buy"
        android:textSize="24sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/shop_product_remove_ads_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/shop_product_remove_ads_button"
        android:layout_alignBottom="@id/shop_product_remove_ads_button"
        android:layout_marginLeft="10sp"
        android:gravity="center"
        android:text="@string/shop_product_remove_ads"
        android:textSize="28sp"
        android:textColor="@color/white" />

</RelativeLayout>